syntax = "proto3";

package gen.auth;
option go_package = "github.com/galexrt/arpanet/gen/auth";

message User {
    string email = 1;
    string password = 2;
}

message Account {
    string token = 1;
}

message Nothing {}

service AccountService {
    rpc Create(User) returns (User);
    rpc AuthenticateByEmailAndPassword(User) returns (Account);
    rpc ChangePassword(User) returns (Nothing);
}
