syntax = "proto3";

package resources.documents.templates;
option go_package = "github.com/galexrt/arpanet/proto/resources/documents/templates;templates";

import "resources/users/users.proto";
import "validate/validate.proto";

message TemplateData {
  resources.users.User activeChar = 1;
  repeated resources.users.User users = 2 [(validate.rules).repeated.max_items = 3];
}
